# sts-ai

./: .gitignore  CLAUDE.md  NextStep.md  README.md  pyproject.toml
configs/: frozen_seeds.json
docs/: full_game_rollouts_plan.md  grpo_dryrun_checklist.md  grpo_readiness_handoff.md  grpo_trainer_choice.md  inference_engine_decision.md  map_representation_handoff.md  progress_report_2026-06-14.md  progress_report_2026-06-18.md  research_plan.md  reward_spec.md  rl_and_framing_design.md  simulator_issue_handoff.md  throughput_benchmarks.md
patches/: sts_lightspeed_python_api.patch
scripts/: CLAUDE.md  audit_rollouts.py  build_lightspeed.sh  build_pg_dataset.py  build_sft_dataset.py  compare_models.py  compare_paired.py  compute_risk_proxies.py  interactive_app.py  run_batch.py  run_grpo.py  run_rollout.py  run_sweep.py  run_until.py  summarize_rollouts.py  train_overnight_e4b.py  train_pg.py  train_policy.py  visualize_rollout.py
scripts/runpod/: README.md  eval_paired.sh  iter2_status.sh  models_all.txt  models_gated.txt  models_pod_a.txt  models_pod_b.txt  run_grpo.sh  run_iter2_pipeline.sh  run_iter2_resume.sh  run_offline_pg.sh  run_sweep_on_pod.sh  run_with_autostop.sh  setup_pod.sh  sweep_status.sh  sync_back.sh
src/sts_ai/: CLAUDE.md  __init__.py  affordances.py  agent_factory.py  agents.py  eval_metrics.py  eval_stats.py  glossary.py  hinting.py  lightspeed.py  lightspeed_import.py  parallel_rollout.py  prompting.py  risk_proxies.py  rollout.py  rollout_view.py  rollout_view_html.py  schemas.py  seeding.py  streaming_rollout.py
tests/: CLAUDE.md  support.py  test_agents.py  test_battle_search_regression.py  test_rollout.py
tests/integration/: test_battle_search.py  test_combat_control.py  test_full_game_progression.py  test_interactive_replay.py  test_interactive_session.py  test_parallel_rollout.py  test_rollout.py  test_run_until.py  test_streaming_rollout.py  test_train_mlx_smoke.py
tests/unit/: test_advantage.py  test_affordances.py  test_agent_factory_adapter.py  test_agents.py  test_audit_rollouts.py  test_compare_paired.py  test_dataset_builder.py  test_eval_metrics.py  test_eval_stats.py  test_glossary.py  test_grpo_loop.py  test_hinting.py  test_interactive_server.py  test_interactive_session.py  test_interactive_store.py  test_interactive_templates.py  test_lightspeed_dedup.py  test_parallel_rollout.py  test_pg_dataset.py  test_pg_loss.py  test_prompting.py  test_reward.py  test_risk_proxies.py  test_rollout.py  test_rollout_meta.py  test_rollout_view.py  test_run_until.py  (+7 more)
(+20 files in other folders)
