[project]
name = "slay-the-spire-ai"
version = "0.1.0"
description = "Local research harness for LLM policies in sts_lightspeed."
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
llm = ["mlx-lm==0.29.1"]
vllm = ["vllm==0.6.6"]
viz = ["streamlit==1.40.2"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
