[project]
name = "slay-the-spire-ai"
version = "0.1.0"
description = "Local research harness for LLM policies in sts_lightspeed."
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
llm = ["mlx-lm==0.29.1"]
train-mlx = ["mlx-lm==0.29.1"]
# CUDA LoRA training. trl/peft/accelerate/datasets only -- do NOT pin transformers
# or torch here (they are owned by the [vllm] extra; pinning them risks a conflict
# with vllm==0.23.0). Exact versions MUST be verified/locked on the CUDA pod
# against the vllm-pulled torch before relying on this.
train-cuda = ["trl>=0.12,<0.15", "peft>=0.13", "accelerate>=1.0", "datasets>=3.0"]
vllm = ["vllm==0.23.0"]
viz = ["streamlit==1.40.2"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
